force-app/main/default/objects/Contact/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <label>班级</label>
    <length>20</length>
    <type>Text</type>
</CustomField>