force-app/main/default/objects/Contact/fields/CultureLevel__c.field-meta.xml
<CustomField>
    <fullName>CultureLevel__c</fullName>
    <label>文化程度</label>
    <length>20</length>
    <type>Text</type>
</CustomField>