force-app/main/default/objects/Contact/fields/EducationalSystem__c.field-meta.xml
<CustomField>
    <fullName>EducationalSystem__c</fullName>
    <label>学制</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>