force-app/main/default/objects/Contact/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>年级</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>