force-app/main/default/objects/Contact/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>专业</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProfessionGlobal</valueSetName>
    </valueSet>
</CustomField>