force-app/main/default/objects/Contact/fields/SecondaryCollege__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCollege__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>学院</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>教学科研单位</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>学生(学院)</relationshipLabel>
    <relationshipName>StuSecondaryCollege</relationshipName>
    <type>Lookup</type>
</CustomField>