force-app/main/default/objects/Contact/fields/SecondaryCollegeText__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCollegeText__c</fullName>
    <formula>SecondaryCollege__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>学院名称</label>
    <type>Text</type>
</CustomField>