force-app/main/default/objects/Contact/fields/StudentIdNumber__c.field-meta.xml
<CustomField>
    <fullName>StudentIdNumber__c</fullName>
    <label>身份证</label>
    <length>30</length>
    <type>Text</type>
</CustomField>