force-app/main/default/objects/Contact/fields/StudentNumber__c.field-meta.xml
<CustomField>
    <fullName>StudentNumber__c</fullName>
    <label>学号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>