force-app/main/default/objects/Contact/fields/StudentStatus__c.field-meta.xml
<CustomField>
    <fullName>StudentStatus__c</fullName>
    <label>学籍状态</label>
    <length>20</length>
    <type>Text</type>
</CustomField>