force-app/main/default/objects/Contact/listViews/AICollege_Contact_ListView.listView-meta.xml
<ListView>
    <fullName>AICollege_Contact_ListView</fullName>
    <columns>StudentNumber__c</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>SecondaryCollege__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SecondaryCollege__c</field>
        <operation>equals</operation>
        <value>人工智能学院</value>
    </filters>
    <label>人工智能学院</label>
</ListView>